# bunner-cors-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PLAN.md  README.ko.md  README.md  TODO.md
.github/workflows/: coverage.yml  pr-check.yml  publish.yml  tests.yml
benches/: bunner_cors_rs.rs
docs/: phase2-plan.md
examples/actix/: main.rs  routes.rs
examples/actix/cors/: middleware.rs  mod.rs
examples/axum/: main.rs  routes.rs
examples/axum/cors/: middleware.rs  mod.rs
examples/hyper/: main.rs  routes.rs
examples/hyper/cors/: middleware.rs  mod.rs
src/: allowed_headers.rs  allowed_headers_test.rs  allowed_methods.rs  allowed_methods_test.rs  case.rs  constants.rs  context.rs  cors.rs  cors_test.rs  exposed_headers.rs  exposed_headers_test.rs  header_builder.rs  header_builder_test.rs  headers.rs  headers_test.rs  lib.rs  normalized_request.rs  normalized_request_test.rs  options.rs  options_test.rs  origin.rs  origin_test.rs  policy.rs  result.rs  timing_allow_origin.rs  timing_allow_origin_test.rs  util.rs  util_test.rs
tests/: cors_integration.rs  header_configuration.rs  misc_configuration.rs  origin_configuration.rs  preflight_requests.rs  property_based.rs  simple_requests.rs  snapshot_validations.rs  thread_safety.rs
tests/common/: asserts.rs  builders.rs  headers.rs  mod.rs
tests/snapshots/: default_preflight_snapshot.snap  mirror_origin_preflight_snapshot.snap  snapshot_validations__default_preflight_snapshot.snap  snapshot_validations__mirror_origin_preflight_snapshot.snap  snapshot_validations__strict_origin_preflight_snapshot.snap  strict_origin_preflight_snapshot.snap
tests/support/: mod.rs
