[package]
name = "bunner_cors_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
once_cell = "1"
regex = "1"
thiserror = "1"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
