[package]
name = "bunner_cors_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A lightweight CORS (Cross-Origin Resource Sharing) core library for Rust"
repository = "https://github.com/parkrevil/bunner-cors-rs"
documentation = "https://docs.rs/bunner_cors_rs"
homepage = "https://github.com/parkrevil/bunner-cors-rs"
keywords = ["cors", "http", "web", "security", "middleware"]
categories = ["web-programming", "network-programming"]
authors = ["parkrevil"]
readme = "README.md"

[dependencies]
once_cell = "1"
regex-automata = "0.4"
thiserror = "1"
indexmap = "2"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "bunner_cors_rs"
harness = false
