[package]
name = "bunner_cors_rs"
version = "0.1.1"
edition = "2024"
license = "LICENSE.md"
description = "A lightweight CORS (Cross-Origin Resource Sharing) core library for Rust"
repository = "https://github.com/parkrevil/bunner-cors-rs"
documentation = "https://github.com/parkrevil/bunner-cors-rs"
homepage = "https://github.com/parkrevil/bunner-cors-rs"
keywords = ["cors", "http", "web", "security", "middleware"]
categories = ["web-programming", "network-programming"]
authors = ["parkrevil"]
readme = "README.md"

[dependencies]
regex-automata = "0.4"
thiserror = "2"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.7", features = ["html_reports"] }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = { version = "4", features = ["macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "service", "http1", "tokio"] }
http-body-util = "0.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "bunner_cors_rs"
harness = false
